<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainscreenback"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/toolbar_round"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_tittle">


        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:src="@drawable/profile" />


    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/blue_card_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/ttlaamountreedemed"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_amount"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="100.000"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/amountcurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/total_amount"
            android:layout_toEndOf="@+id/amount"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="KWD"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btnScan"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonbackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/scan_qr_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@mipmap/smallqr"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="Scan QR"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/linearButtonAdsdCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/buttonback_white"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnAddCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="+ Add Code"
                    android:textColor="@color/btnAddcodeText"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtReedem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/main_recently_Redemption"
            android:textColor="@color/txtReedem"
            android:textStyle="bold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/txtViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:text="@string/main_viewAll"
            android:textColor="@color/txtViewAll"
            android:drawableRight="@mipmap/icon"
            android:textStyle="bold"
            android:textSize="16sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerReedemHistory"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_height="match_parent"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20dp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>
